<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="self"
            type="com.github.kr328.clash.design.SettingsDesign" />

        <import type="com.github.kr328.clash.design.SettingsDesign.Request" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@{self.surface.insets.start}"
        android:paddingEnd="@{self.surface.insets.end}">

        <com.github.kr328.clash.design.view.ObservableScrollView
            android:id="@+id/scroll_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@{(float) self.surface.insets.top + @dimen/toolbar_height}"
                android:paddingBottom="@{self.surface.insets.bottom}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:text="@string/kernel_config"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="13sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.github.kr328.clash.design.view.LargeActionLabel
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> self.request(Request.StartGeneral)}"
                            app:icon="@drawable/ic_baseline_settings"
                            app:subtext="@string/kernel_general_summary"
                            app:text="@string/general" />

                        <include layout="@layout/component_list_divider" />

                        <com.github.kr328.clash.design.view.LargeActionLabel
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> self.request(Request.StartNetwork)}"
                            app:icon="@drawable/ic_baseline_vpn_lock"
                            app:subtext="@string/kernel_network_summary"
                            app:text="@string/network" />

                        <include layout="@layout/component_list_divider" />

                        <com.github.kr328.clash.design.view.LargeActionLabel
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> self.request(Request.StartDns)}"
                            app:icon="@drawable/ic_baseline_dns"
                            app:subtext="@string/kernel_dns_summary"
                            app:text="@string/dns" />

                        <include layout="@layout/component_list_divider" />

                        <com.github.kr328.clash.design.view.LargeActionLabel
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> self.request(Request.StartHosts)}"
                            app:icon="@drawable/ic_baseline_view_list"
                            app:subtext="@string/kernel_hosts_summary"
                            app:text="@string/hosts" />

                        <include layout="@layout/component_list_divider" />

                        <com.github.kr328.clash.design.view.LargeActionLabel
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> self.request(Request.StartMetaFeature)}"
                            app:icon="@drawable/ic_baseline_extension"
                            app:subtext="@string/kernel_meta_summary"
                            app:text="@string/meta_features" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </com.github.kr328.clash.design.view.ObservableScrollView>

        <com.github.kr328.clash.design.view.ActivityBarLayout
            android:id="@+id/activity_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@{self.surface.insets.top}"
            android:paddingEnd="@dimen/item_tailing_margin">

            <include layout="@layout/common_activity_bar" />
        </com.github.kr328.clash.design.view.ActivityBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
