<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="surface"
            type="com.github.kr328.clash.design.ui.Surface" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@{surface.insets.start}"
        android:paddingTop="@{surface.insets.top}"
        android:paddingEnd="@{surface.insets.end}"
        android:paddingBottom="@{surface.insets.bottom}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/item_tailing_margin">

            <ImageView
                android:id="@+id/close_view"
                android:layout_width="@dimen/item_header_component_size"
                android:layout_height="@dimen/item_header_component_size"
                android:layout_margin="@dimen/item_header_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/close"
                android:focusable="true"
                android:padding="@dimen/toolbar_image_action_padding"
                android:src="@drawable/ic_baseline_close" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/keyword_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keyword"
                android:singleLine="true" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.kr328.clash.design.view.AppRecyclerView
                android:id="@+id/main_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/dialog_padding" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/search_apps_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</layout>
